# betavae-xai-ad

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: aal3_131_manual_network_order.csv
notebooks/: ADNI_table.ipynb  ablation_canales.ipynb  analysis_ablation.ipynb  analysis_training_qc.ipynb  feature_extraction.ipynb  feature_extraction_manual.ipynb  qc_fmri_bold.ipynb  run_interpretability_ad.ipynb  run_vae_clf_ad.ipynb  run_vae_clf_ad2.ipynb  run_vae_clf_ad2_beta22.ipynb  run_vae_clf_ad3.ipynb  run_vae_clf_ad66.ipynb  run_vae_clf_ad_2ch_beta25.ipynb  run_vae_clf_ad_3ch_beta25.ipynb
notebooks/Tables_Nature/: Summary_Spearman_saliency_vs_effect.txt  Summary_Spearman_saliency_vs_effect_top250_nonconsensus.txt  Table2_Consensus_Edges_Annotated.tex  TableS3_Network_Enrichment.csv  Table_ConsensusEdges_signature.csv  Table_Lateralization_stats.csv  consensus_edges_effectsize_topK100_pi0.6_tau0.6.csv  consensus_edges_effectsize_topK250_pi0.6_tau0.6.csv  consensus_edges_effectsize_topK300_pi0.6_tau0.6.csv  consensus_edges_effectsize_topK350_pi0.6_tau0.6.csv  consensus_edges_effectsize_topK500_pi0.6_tau0.6.csv
notebooks/ablation_full_run_fast/: summary_ablation.csv
notebooks/ablation_full_run_fast/single_ch0/: all_folds_metrics_MULTI_logreg_vaeconvtranspose4l_ld128_beta1.2_normzscore_offdiag_ch1sel_intFCquarter_drop0.2_ln0_outer3x1_scoreroc_auc.csv  (+1 more)
scripts/: ablation_canales.py  run_interpretability.py  run_vae_clf_ad.py  run_vae_clf_ad_ablation.py
src/betavae_xai/: __init__.py  analysis_qc.py  feature_extraction.py  feature_extraction_manual.py
(+49 files in other folders)
